fixed help panel layout bug that only appears on desktop

--- a/tonemotion-shared/css/styles-1.3.0.css
+++ b/tonemotion-shared/css/styles-1.3.0.css
@@ -349,7 +349,7 @@ fieldset {
 }
 
 #help_panel {
-  position: absolute;
+  position: fixed;
   z-index: 1;
   top: 0;
   height: 100vh;
